--- a/images/style.css
+++ b/images/style.css
@@ -1887,6 +1887,12 @@ p {
     padding-top: 30px;
 }
 
-.foot_about .bi {
+.foot_about .img-social {
     font-size: 40px;
+    height: 40px;
+}
+
+.foot_about .img-social-div {
+    margin-left: 20px;
+    margin-right: 20px;
 }
